--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@
 .page-footer {
     background: #45526e!important;
     color: #fff;
-    margin-top: 75px;
+    margin-top: 2em;
 }
 .fab {
     font-size: 1.4rem;
